Fixing wrap CSS

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 .App {
   text-align: center;
   display: flex;
-  flex-wrap: wrap ;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   align-items: center;
   justify-content: center;
 }
